# empty-pkcs11

./: .gitignore  CMakeLists.txt
include/: utils.h
src/: empty-pkcs11.c  pkcs11_config.h  utils.c
